--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "parcel-project-template",
+  "name": "goit-js-hw-09",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://vityamin-n.github.io/goit-js-hw-09",
+  "homepage": "https://vityamin-n.github.io/goit-js-hw-09/",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-09/"
@@ -24,5 +24,9 @@
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "flatpickr": "^4.6.9",
+    "notiflix": "^3.2.2"
   }
 }
